--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 h1{
-color: rgb(255, 0, 0);
+color: rgb(238, 255, 0);
 
 }
 body{
 
-    background-color: black;
+    background-color: rgb(255, 173, 173);
 }
